// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthProvider.svelte > oauth > should render oauth button 1`] = `
<div>
  <!---->
  <!---->
  <button
    data-button-root="true"
    tabindex="0"
    type="button"
  >
    <!---->
    <!---->
    <rk-icon
      aria-label="i-auth-google"
      data-tag="icon"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="i-auth-google"
      />
    </rk-icon>
    <!---->
     
    <span>
      Sign in with Google
    </span>
    
    
  </button>
  
  
  
</div>
`;

exports[`AuthProvider.svelte > oauth > should render oauth button with scopes 1`] = `
<div>
  <!---->
  <!---->
  <button
    data-button-root="true"
    tabindex="0"
    type="button"
  >
    <!---->
    <!---->
    <rk-icon
      aria-label="i-auth-azure"
      data-tag="icon"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="i-auth-azure"
      />
    </rk-icon>
    <!---->
     
    <span>
      Sign in with Azure
    </span>
    
    
  </button>
  
  
  
</div>
`;

exports[`AuthProvider.svelte > otp > should handle errors 1`] = `
<div>
  <!---->
  <form
    class="flex w-full p-0 "
  >
    <input-field
      class="flex flex-col input-email   empty"
    >
      <label
        for="magic"
      >
        magic link
      </label>
      <!---->
       
      <field
        aria-label="magic link"
        class="flex w-full flex-row items-center"
      >
        <rk-icon
          aria-label="i-auth-magic"
          data-tag="icon"
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="i-auth-magic"
          />
        </rk-icon>
        <!---->
         
        <!---->
         
        <!---->
        <input
          id="magic"
          name="magic"
          placeholder="Sign in with Magic Link"
          type="email"
        />
        
        <!---->
         
        <!---->
      </field>
       
      <!---->
    </input-field>
    <!---->
  </form>
  
  
</div>
`;

exports[`AuthProvider.svelte > otp > should render magic link 1`] = `
<div>
  <!---->
  <form
    class="flex w-full p-0 custom"
  >
    <input-field
      class="flex flex-col input-email   empty"
    >
      <label
        for="magic"
      >
        magic link
      </label>
      <!---->
       
      <field
        aria-label="magic link"
        class="flex w-full flex-row items-center"
      >
        <rk-icon
          aria-label="i-auth-magic"
          data-tag="icon"
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="i-auth-magic"
          />
        </rk-icon>
        <!---->
         
        <!---->
         
        <!---->
        <input
          id="magic"
          name="magic"
          placeholder="Sign in with Magic Link"
          type="email"
        />
        
        <!---->
         
        <!---->
      </field>
       
      <!---->
    </input-field>
    <!---->
  </form>
  
  
</div>
`;

exports[`AuthProvider.svelte > otp > should render magic link wth custom class 1`] = `
<div>
  <!---->
  <form
    class="flex w-full p-0 "
  >
    <input-field
      class="flex flex-col input-email   empty"
    >
      <label
        for="magic"
      >
        magic link
      </label>
      <!---->
       
      <field
        aria-label="magic link"
        class="flex w-full flex-row items-center"
      >
        <rk-icon
          aria-label="i-auth-magic"
          data-tag="icon"
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="i-auth-magic"
          />
        </rk-icon>
        <!---->
         
        <!---->
         
        <!---->
        <input
          id="magic"
          name="magic"
          placeholder="Sign in with Magic Link"
          type="email"
        />
        
        <!---->
         
        <!---->
      </field>
       
      <!---->
    </input-field>
    <!---->
  </form>
  
  
</div>
`;

exports[`AuthProvider.svelte > otp > should render magic link wth custom class 2`] = `
<div>
  <!---->
  <form
    class="flex w-full p-0 custom"
  >
    <input-field
      class="flex flex-col input-email   empty"
    >
      <label
        for="magic"
      >
        magic link
      </label>
      <!---->
       
      <field
        aria-label="magic link"
        class="flex w-full flex-row items-center"
      >
        <rk-icon
          aria-label="i-auth-otp"
          data-tag="icon"
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="i-auth-otp"
          />
        </rk-icon>
        <!---->
         
        <!---->
         
        <!---->
        <input
          id="magic"
          name="magic"
          placeholder="Sign in with Magic Link"
          type="email"
        />
        
        <!---->
         
        <!---->
      </field>
       
      <!---->
    </input-field>
    <!---->
  </form>
  
  
</div>
`;

exports[`AuthProvider.svelte > password > should handle errors 1`] = `
<div>
  <!---->
  <!---->
  <input-field
    class="flex flex-col input-email   empty"
  >
    <label
      for="email"
    >
      email
    </label>
    <!---->
     
    <field
      aria-label="email"
      class="flex w-full flex-row items-center"
    >
      <rk-icon
        aria-label="i-auth-email"
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-email"
        />
      </rk-icon>
      <!---->
       
      <!---->
       
      <!---->
      <input
        autocomplete="on"
        id="email"
        name="email"
        type="email"
      />
      
      <!---->
       
      <!---->
    </field>
     
    <!---->
  </input-field>
  <!---->
   
  <input-field
    class="flex flex-col input-password   empty"
  >
    <label
      for="password"
    >
      Password
    </label>
    <!---->
     
    <field
      aria-label="Password"
      class="flex w-full flex-row items-center"
    >
      <rk-icon
        aria-label="i-auth-password"
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-password"
        />
      </rk-icon>
      <!---->
       
      <!---->
       
      <!---->
      <input
        id="password"
        name="password"
        type="password"
      />
      
      <!---->
       
      <!---->
    </field>
     
    <!---->
  </input-field>
  <!---->
   
  <button
    class="col-start-3 text-center h-10 mt-4 bg-primary text-white"
  >
    Sign in
  </button>
  
  
</div>
`;

exports[`AuthProvider.svelte > password > should render email/password auth 1`] = `
<div>
  <!---->
  <!---->
  <input-field
    class="flex flex-col input-email   empty"
  >
    <label
      for="email"
    >
      email
    </label>
    <!---->
     
    <field
      aria-label="email"
      class="flex w-full flex-row items-center"
    >
      <rk-icon
        aria-label="i-auth-email"
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-email"
        />
      </rk-icon>
      <!---->
       
      <!---->
       
      <!---->
      <input
        autocomplete="on"
        id="email"
        name="email"
        type="email"
      />
      
      <!---->
       
      <!---->
    </field>
     
    <!---->
  </input-field>
  <!---->
   
  <input-field
    class="flex flex-col input-password   empty"
  >
    <label
      for="password"
    >
      Password
    </label>
    <!---->
     
    <field
      aria-label="Password"
      class="flex w-full flex-row items-center"
    >
      <rk-icon
        aria-label="i-auth-password"
        data-tag="icon"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="i-auth-password"
        />
      </rk-icon>
      <!---->
       
      <!---->
       
      <!---->
      <input
        id="password"
        name="password"
        type="password"
      />
      
      <!---->
       
      <!---->
    </field>
     
    <!---->
  </input-field>
  <!---->
   
  <button
    class="col-start-3 text-center h-10 mt-4 bg-primary text-white"
  >
    Sign in
  </button>
  
  
</div>
`;
